<resources>
    <string name="app_name">Village Buys</string>
    <string name="tag_line">Always near you</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="facebook_application_id" translatable="false">289061542115446</string>
    <string name="facebook_login_protocol_scheme">fb289061542115446</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>


    <string name="tindahan_welcome">
    <![CDATA[
        <h1>Welcome!</h1>
        If you are interested in selling products in our marketplace, you need to register
        store details first.
    ]]>
    </string>

    <string name="tindahan_name_help">
    <![CDATA[
        <h5>What is the name of your store?</h5>
    ]]>
    </string>

    <string name="tindahan_name_hint">My Food Store</string>

    <string name="tindahan_address_help">
    <![CDATA[
        <h5>Where is your place of business located?</h5>
    ]]>
    </string>
    <string name="tindahan_address_hint">No. 1 Rizal St., Pasig</string>

    <string name="tindahan_contact_info_help">
    <![CDATA[
        <h5>How do you want to be contacted? </h5>
        Please include all mobile numbers, landline,
        and email address separated by a comma.
    ]]>
    </string>
    <string name="tindahan_contact_info_hint">0999-123-1234, 8877-0000,  mfs@email.com</string>

    <string name="tindahan_service_area_help">
    <![CDATA[
        <h5>Which areas can you accommodate for deliveries?</h5>
        <i>Please select only from this list of cities:</i>
        <br>
        <pre>
        Caloocan, Malabon, Navotas, Valenzuela, Quezon City, Marikina, Pasig, Taguig,
        Makati, Manila, Mandaluyong, San Juan, Pasay, Parañaque, Las Piñas, and Muntinlupa
        </pre>
    ]]>
    </string>
    <string name="tindahan_service_area_hint">Makati, Pasay, Manila</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>
