<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.gallery.GalleryFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_tindahan_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:text="@string/tindahan_welcome" />

        <TextView
            android:id="@+id/txt_tindahan_name_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_tindahan_welcome"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:text="@string/tindahan_name_help" />

        <EditText
            android:id="@+id/txt_tindahan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_tindahan_name_help"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/tindahan_name_hint"/>


        <TextView
            android:id="@+id/txt_address_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_tindahan_name"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:text="@string/tindahan_address_help" />

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:layout_below="@+id/txt_address_help"
            android:inputType="textMultiLine"
            android:hint="@string/tindahan_address_hint"/>

        <TextView
            android:id="@+id/txt_contact_info_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_address"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:text="@string/tindahan_contact_info_help" />

        <EditText
            android:id="@+id/txt_contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:layout_below="@+id/txt_contact_info_help"
            android:inputType="textMultiLine"
            android:hint="@string/tindahan_contact_info_hint"/>

        <TextView
            android:id="@+id/txt_service_area_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_contact_info"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:text="@string/tindahan_service_area_help" />

        <EditText
            android:id="@+id/txt_service_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:layout_below="@+id/txt_service_area_help"
            android:inputType="textMultiLine"
            android:hint="@string/tindahan_service_area_hint"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:text="Register"
            android:layout_below="@+id/txt_service_area" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>